2005-08-28  Ben Maurer  <bmaurer@ximian.com>

	* gtk/NodeSelection.cs: helper api

2005-08-27  Peter Williams  <peter@newton.cx>

	* gnome/Program.custom: Use a GLib.Argv in PersistentData to store
	a handle to argv, so that the unmanaged strings aren't freed out
	from under popt. This allows the popt context to actually be used.

2005-08-26  John Luke  <john.luke@gmail.com>

	* glib/Signal.cs: deal with obj.Handle == IntPtr.Zero
	to avoid assertions
	
2005-08-25  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : move GACUTIL check forward ahead of a use.
	* Makefile.include : distcheck fixes
	* glib/Makefile.am : distcheck fixes
	* gtkdotnet/Makefile.am : distcheck fixes

2005-08-25  Mike Kestner  <mkestner@novell.com>

	* configure.in.in : add PLATFORM_WIN32 conditional. Borrow mono's 
	libtool s/cyg// hack. Improve/relocate System.Drawing check.
	* Makefile.include : add gapi-cdecl-insert handling for win32.
	* glib/Makefile.am : add gapi-cdecl-insert handling for win32.
	* gtkdotnet/Makefile.am : s/-r:System.Drawing/-r:System.Drawing.dll/.
	* sample/DrawingSample.cs : remove C# 2.0-isms.
	* sample/Makefile.am : s/-r:System.Drawing/-r:System.Drawing.dll/.

2005-08-25  Mike Kestner  <mkestner@novell.com>

	* bootstrap : bump version to 2.5.90.99
	* bootstrap-2.4 : bump version to 2.3.90.99

2005-08-25  Mike Kestner  <mkestner@novell.com>

	* sample/GtkDemo/DemoIconView.cs : remove C# 2.0-isms.
	* sample/opaquetest/OpaqueTest.cs : remove C# 2.0-isms.
	* sample/valuetest/ValueTest.cs : remove C# 2.0-isms.
	* sample/PolarFixed.cs : remove C# 2.0-isms.

2005-08-23  Ben Maurer  <bmaurer@novell.com>

	* glib/Object.cs: Escape names and ensure stuff is unique.

2005-08-23  Joe Shaw  <joeshaw@novell.com>

	* generator/SymbolTable.cs: Add "unsigned" as a type
	which maps to "uint".

	* parser/gapi2xml.pl: Handle "type const *" return types
	as well.  I think this is all of them!

2005-08-23  Joe Shaw  <joeshaw@novell.com>
