@@ -1,5 +1,8 @@
 2005-08-28  Ben Maurer  <bmaurer@ximian.com>
 
+	* Makefile.am (gtk-sharp-docs.zip gtk-sharp-docs.tree): Use
+	mdassembler.
+
 	* en/Gtk/NodeSelection.xml: Docs
 
 2005-08-14  John Luke  <john.luke@gmail.com>
