@@ -1,5 +1,8 @@
 2005-08-28  Ben Maurer  <bmaurer@ximian.com>
 
+	* configure.in.in: Enable doc building without mono-tools being
+	built.
+
 	* gtk/NodeSelection.cs: helper api
 
 2005-08-27  Peter Williams  <peter@newton.cx>
